@@ -233,6 +233,8 @@ Release 0.21.0 - Unreleased
                (dhruba borthakur via Stack)
    HBASE-2308  Fix the bin/rename_table.rb script, make it work again
    HBASE-2307  hbase-2295 changed hregion size, testheapsize broke... fix it
+   HBASE-2269  PerformanceEvaluation "--nomapred" may assign duplicate random
+               seed over multiple testing threads (Tatsuya Kawano via Stack)
 
   IMPROVEMENTS
    HBASE-1760  Cleanup TODOs in HTable
